testcases/negative/invalid_parameter_value.vcf
BEGIN:VCARD
VERSION:4.0
FN:John Doe
TEL;TYPE=invalid-type:+1-555-1234
END:VCARD
